manifests/ingress/argocd-server-proxy-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: argocd-server-proxy
  namespace: default
spec:
  type: ExternalName
  externalName: argocd-server.argocd.svc.cluster.local
  ports:
    - port: 80
      targetPort: 90
      protocol: TCP
      name: https
