manifests/ingress/argocd-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: argocd.homelab
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: argocd-server-proxy
                port:
                  number: 8080
